--- a/public/index.html
+++ b/public/index.html
@@ -1,239 +1,94 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-  <head>
-    <title>Ruby on Rails: Welcome aboard</title>
-    <style type="text/css" media="screen">
-      body {
-        margin: 0;
-        margin-bottom: 25px;
-        padding: 0;
-        background-color: #f0f0f0;
-        font-family: "Lucida Grande", "Bitstream Vera Sans", "Verdana";
-        font-size: 13px;
-        color: #333;
-      }
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+<META HTTP-EQUIV="EXPIRES" CONTENT="0">
+<title>OnMaCon PMT 2.0 - SlickGrid Master</title>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 
-      h1 {
-        font-size: 28px;
-        color: #000;
-      }
+<link rel="stylesheet" href="/stylesheets/slick.grid.css" type="text/css"
+	media="screen" charset="utf-8" />
+<link rel="stylesheet" href="/stylesheets/slick.columnpicker.css" type="text/css"
+	media="screen" charset="utf-8" />
 
-      a  {color: #03c}
-      a:hover {
-        background-color: #03c;
-        color: white;
-        text-decoration: none;
-      }
+<link rel="stylesheet" href="/stylesheets/start/jquery-ui-1.8.6.custom.css"
+	type="text/css" media="screen" charset="utf-8" />
+<link rel="stylesheet" href="/stylesheets/slick.custom.css" type="text/css"
+	media="screen" charset="utf-8" />
+<link rel="stylesheet" href="/stylesheets/slick.pager.css" type="text/css"
+	media="screen" charset="utf-8" />
 
+<script language="JavaScript" src="/javascripts/jquery-1.4.2.min.js"
+	charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/jquery-ui-1.8.6.custom.min.js"
+	charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/jquery.event.drag-2.0.min.js"
+	charset="utf-8"></script>
 
-      #page {
-        background-color: #f0f0f0;
-        width: 750px;
-        margin: 0;
-        margin-left: auto;
-        margin-right: auto;
-      }
+<script language="JavaScript" src="/javascripts/slick.grid-1.4.3.js" charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/slick.editors-1.0.js" charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/slick.model-1.0.js" charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/slick.pager-1.0.js" charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/slick.columnpicker-1.0.js"
+	charset="utf-8"></script>
 
-      #content {
-        float: left;
-        background-color: white;
-        border: 3px solid #aaa;
-        border-top: none;
-        padding: 25px;
-        width: 500px;
-      }
+<script language="JavaScript" src="/javascripts/requestcontroller-1.0.js"
+	charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/request-1.0.js" charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/slick.filter-1.0.js" charset="utf-8"></script>
+<script language="JavaScript" src="/javascripts/slick.custom-1.0.js" charset="utf-8"></script>
 
-      #sidebar {
-        float: right;
-        width: 175px;
-      }
-
-      #footer {
-        clear: both;
-      }
+</head>
+<body>
 
 
-      #header, #about, #getting-started {
-        padding-left: 75px;
-        padding-right: 30px;
-      }
+
+<a href=><img src="/images/onmacon_logo.gif" alt="OnMaCon"></a>
+<button id="home">Home</button>
+<input type="text" id="loadcols" value="1000" size=2>
+<button id="reload">Neu Laden</button>
+<button id="options">Optionen</button>
+<button id="help">Hilfe</button>
+<button id="debug">Debug</button>
+<table id="main" width="100%">
+	<tr>
+
+		<td valign="top" width="200">
+		<div id="myGrid"></div>
+		<div id="pager"></div>
+		</td>
+
+		<td valign="top">
+
+		<div id="accordion" style="float: right; width: 100%;">
+		<h3><a href="#">Filter</a></h3>
+		<div id="filter"></div>
+		<h3><a href="#">Gesamtsummen</a></h3>
+		<div id="sum"></div>
+		<h3><a href="#"">Was ist neu?</a></h3>
+		<div>
+		<ul>
+			<li>Mehrere Popups möglich, Popout-Funktionalität, weitere Implementierung später.</li>
+			<li>Gesamtsummen werden jetzt wie korrespondierende Zellen formatiert</li>
+		</ul>
+		</div>
+		<h3><a href="#">Offene Fragen</a></h3>
+		<div>
+		<ul>
+			<li>-</li>
+		</ul>
+		</div>
+		</div>
+		</td>
+	</tr>
+</table>
+<div id="rc"></div>
+<div id="graph"></div>
+<div id="loader"></div>
 
 
-      #header {
-        background-image: url("images/rails.png");
-        background-repeat: no-repeat;
-        background-position: top left;
-        height: 64px;
-      }
-      #header h1, #header h2 {margin: 0}
-      #header h2 {
-        color: #888;
-        font-weight: normal;
-        font-size: 16px;
-      }
-
-
-      #about h3 {
-        margin: 0;
-        margin-bottom: 10px;
-        font-size: 14px;
-      }
-
-      #about-content {
-        background-color: #ffd;
-        border: 1px solid #fc0;
-        margin-left: -55px;
-        margin-right: -10px;
-      }
-      #about-content table {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        font-size: 11px;
-        border-collapse: collapse;
-      }
-      #about-content td {
-        padding: 10px;
-        padding-top: 3px;
-        padding-bottom: 3px;
-      }
-      #about-content td.name  {color: #555}
-      #about-content td.value {color: #000}
-
-      #about-content ul {
-        padding: 0;
-        list-style-type: none;
-      }
-
-      #about-content.failure {
-        background-color: #fcc;
-        border: 1px solid #f00;
-      }
-      #about-content.failure p {
-        margin: 0;
-        padding: 10px;
-      }
-
-
-      #getting-started {
-        border-top: 1px solid #ccc;
-        margin-top: 25px;
-        padding-top: 15px;
-      }
-      #getting-started h1 {
-        margin: 0;
-        font-size: 20px;
-      }
-      #getting-started h2 {
-        margin: 0;
-        font-size: 14px;
-        font-weight: normal;
-        color: #333;
-        margin-bottom: 25px;
-      }
-      #getting-started ol {
-        margin-left: 0;
-        padding-left: 0;
-      }
-      #getting-started li {
-        font-size: 18px;
-        color: #888;
-        margin-bottom: 25px;
-      }
-      #getting-started li h2 {
-        margin: 0;
-        font-weight: normal;
-        font-size: 18px;
-        color: #333;
-      }
-      #getting-started li p {
-        color: #555;
-        font-size: 13px;
-      }
-
-
-      #sidebar ul {
-        margin-left: 0;
-        padding-left: 0;
-      }
-      #sidebar ul h3 {
-        margin-top: 25px;
-        font-size: 16px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #ccc;
-      }
-      #sidebar li {
-        list-style-type: none;
-      }
-      #sidebar ul.links li {
-        margin-bottom: 5px;
-      }
-
-    </style>
-    <script type="text/javascript">
-      function about() {
-        info = document.getElementById('about-content');
-        if (window.XMLHttpRequest)
-          { xhr = new XMLHttpRequest(); }
-        else
-          { xhr = new ActiveXObject("Microsoft.XMLHTTP"); }
-        xhr.open("GET","rails/info/properties",false);
-        xhr.send("");
-        info.innerHTML = xhr.responseText;
-        info.style.display = 'block'
-      }
-    </script>
-  </head>
-  <body>
-    <div id="page">
-      <div id="sidebar">
-        <ul id="sidebar-items">
-          <li>
-            <h3>Browse the documentation</h3>
-            <ul class="links">
-              <li><a href="http://api.rubyonrails.org/">Rails API</a></li>
-              <li><a href="http://stdlib.rubyonrails.org/">Ruby standard library</a></li>
-              <li><a href="http://corelib.rubyonrails.org/">Ruby core</a></li>
-              <li><a href="http://guides.rubyonrails.org/">Rails Guides</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-
-      <div id="content">
-        <div id="header">
-          <h1>Welcome aboard</h1>
-          <h2>You&rsquo;re riding Ruby on Rails!</h2>
-        </div>
-
-        <div id="about">
-          <h3><a href="rails/info/properties" onclick="about(); return false">About your application&rsquo;s environment</a></h3>
-          <div id="about-content" style="display: none"></div>
-        </div>
-
-        <div id="getting-started">
-          <h1>Getting started</h1>
-          <h2>Here&rsquo;s how to get rolling:</h2>
-
-          <ol>
-            <li>
-              <h2>Use <code>rails generate</code> to create your models and controllers</h2>
-              <p>To see all available options, run it without parameters.</p>
-            </li>
-
-            <li>
-              <h2>Set up a default route and remove or rename this file</h2>
-              <p>Routes are set up in config/routes.rb.</p>
-            </li>
-
-            <li>
-              <h2>Create your database</h2>
-              <p>Run <code>rake db:migrate</code> to create your database. If you're not using SQLite (the default), edit <code>config/database.yml</code> with your username and password.</p>
-            </li>
-          </ol>
-        </div>
-      </div>
-
-      <div id="footer">&nbsp;</div>
-    </div>
-  </body>
+<div id="saving" class="ui-widget-header ui-corner-all">Speichern...</div>
+</body>
 </html>
