SlickGrid-Dummy laeuft, alle Bilder muessten korrekte Pfade haben

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 <META HTTP-EQUIV="EXPIRES" CONTENT="0">
-<title>OnMaCon PMT 2.0 - SlickGrid Master</title>
+<title>OnMaCon PMT 2.0 - SlickGrid in RoR</title>
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 
@@ -20,75 +20,10 @@
 <link rel="stylesheet" href="/stylesheets/slick.pager.css" type="text/css"
 	media="screen" charset="utf-8" />
 
-<script language="JavaScript" src="/javascripts/jquery-1.4.2.min.js"
-	charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/jquery-ui-1.8.6.custom.min.js"
-	charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/jquery.event.drag-2.0.min.js"
-	charset="utf-8"></script>
-
-<script language="JavaScript" src="/javascripts/slick.grid-1.4.3.js" charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/slick.editors-1.0.js" charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/slick.model-1.0.js" charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/slick.pager-1.0.js" charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/slick.columnpicker-1.0.js"
-	charset="utf-8"></script>
-
-<script language="JavaScript" src="/javascripts/requestcontroller-1.0.js"
-	charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/request-1.0.js" charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/slick.filter-1.0.js" charset="utf-8"></script>
-<script language="JavaScript" src="/javascripts/slick.custom-1.0.js" charset="utf-8"></script>
-
 </head>
 <body>
 
+<a href="pages/home">Zur Dummy-Applikation</a>
 
-
-<a href=><img src="/images/onmacon_logo.gif" alt="OnMaCon"></a>
-<button id="home">Home</button>
-<input type="text" id="loadcols" value="1000" size=2>
-<button id="reload">Neu Laden</button>
-<button id="options">Optionen</button>
-<button id="help">Hilfe</button>
-<button id="debug">Debug</button>
-<table id="main" width="100%">
-	<tr>
-
-		<td valign="top" width="200">
-		<div id="myGrid"></div>
-		<div id="pager"></div>
-		</td>
-
-		<td valign="top">
-
-		<div id="accordion" style="float: right; width: 100%;">
-		<h3><a href="#">Filter</a></h3>
-		<div id="filter"></div>
-		<h3><a href="#">Gesamtsummen</a></h3>
-		<div id="sum"></div>
-		<h3><a href="#"">Was ist neu?</a></h3>
-		<div>
-		<ul>
-			<li>Mehrere Popups möglich, Popout-Funktionalität, weitere Implementierung später.</li>
-			<li>Gesamtsummen werden jetzt wie korrespondierende Zellen formatiert</li>
-		</ul>
-		</div>
-		<h3><a href="#">Offene Fragen</a></h3>
-		<div>
-		<ul>
-			<li>-</li>
-		</ul>
-		</div>
-		</div>
-		</td>
-	</tr>
-</table>
-<div id="rc"></div>
-<div id="graph"></div>
-<div id="loader"></div>
-
-
-<div id="saving" class="ui-widget-header ui-corner-all">Speichern...</div>
 </body>
 </html>
